# rclnodejs

./: .coveralls.yml  .eslintrc  .eslintrc.yml  .gitattributes  .gitignore  .gitmodules  .istanbul.yml  .npmignore  .npmrc  .prettierrc.yml  .travis.yml  CONTRIBUTORS.md  Dockerfile  README.md  appveyor.yml  binding.gyp  circle.yml  cpplint.js  index.js  jsbeautifyrc  options.js  package-lock.json  package.json  suppr.txt  test-rate.js  test.js  tsconfig.json
.circleci/: config.yml
.github/: linux-build-and-test.yml
@types/: base.d.ts  client.d.ts  clock.d.ts  clock_type.d.ts  context.d.ts  duration.d.ts  entity.d.ts  index.d.ts  logging.d.ts  messages.d.ts  node.d.ts  publisher.d.ts  qos.d.ts  service.d.ts  subscription.d.ts  time.d.ts  time_source.d.ts  timer.d.ts
benchmark/: README.md  automated.py
benchmark/rclcpp/: CMakeLists.txt  client-endurance-test.cpp  client-stress-test.cpp  package.xml  publisher-endurance-test.cpp  publisher-stress-test.cpp  service-endurance-test.cpp  service-stress-test.cpp  startup-test.cpp  subscription-endurance-test.cpp  utilities.hpp
benchmark/rclcpp/service/: client-stress-test.cpp  service-stress-test.cpp
benchmark/rclcpp/topic/: publisher-stress-test.cpp  subscription-stress-test.cpp
benchmark/rclcpp/util/: utilities.hpp
doc/: Client.html  Node.html  Publisher.html  Service.html  Subscription.html  Timer.html  global.html  index.html  index.js.html  lib_client.js.html  lib_node.js.html  lib_publisher.js.html  lib_service.js.html  lib_subscription.js.html  lib_timer.js.html  module-rclnodejs.html
docs/: BUILDING.md  CONTRIBUTING.md  Client.html  Clock.html  Context.html  Duration.html  EFFICIENCY.md  Entity.html  FAQ.md  Logging.html  Makefile  Node.html  Publisher.html  QoS.html  ROSClock.html  Response.html  Service.html  Subscription.html  Time.html  TimeSource.html  Timer.html  client.js.html  clock.js.html  duration.js.html  global.html  index.html  index.js.html  lib_client.js.html  lib_clock.js.html  lib_clock_type.js.html  lib_context.js.html  lib_duration.js.html  lib_entity.js.html  lib_logging.js.html  lib_message_translator.js.html  lib_node.js.html  lib_publisher.js.html  lib_qos.js.html  lib_service.js.html  lib_subscription.js.html  (+15 more)
example/: README.md  action-client-cancel-example.js  action-client-example.js  action-server-defer-example.js  action-server-example.js  action-server-single-goal-example.js  client-example.js  generate_all_message_classes.js  lifecycle-node-example.js  param-test.js  parameter-declaration-example.js  parameter-override-example.js  publisher-content-filter-example.js  publisher-example.js  publisher-message-example.js  publisher-multiarray-example.js  publisher-qos-example.js  publisher-raw-message.js  rate-example.js  ros-graph-example.js  rosidl-parse-action-example.js  rosidl-parse-msg-example.js  rosidl-parse-srv-example.js  service-example.js  subscription-content-filter-example.js  subscription-example.js  subscription-message-example.js  subscription-multiarray-example.js  subscription-qos-example.js  subscription-raw-message.js  subscription-service-event-example.js  time-example.js  timer-example.js  validator-example.js
include/: executor.hpp  macros.hpp  rcl_bindings.hpp  rcl_handle.hpp  rcl_utilities.hpp  shadow_node.hpp
lib/: client.js  clock.js  clock_type.js  context.js  distro.js  duration.js  entity.js  guard_condition.js  interface_loader.js  lifecycle.js  lifecycle_publisher.js  logging.js  message-translator.js  message.js  message_translator.js  node.js  node_options.js  parameter.js  parameter_service.js  publisher.js  qos.js  rate.js  rmw.js  service.js  service_introspection.js  subscription.js  time.js  time_source.js  timer.js  utility.js  validator.js
rosidl_gen/: action_generator.js  action_msgs.js  blocklist.json  deallocator.js  filter.js  generator.js  generator.json  generator_primitive.js  idl_generator.js  index.js  message.js  message_translator.js  packages.js  primitive_types.js
rosidl_parser/: generator_primitive.js  parser.py  py_utils.js  rosidl_parser.js
rostsd_gen/: index.js  readme.md
scripts/: build.js  build.sh  compile_cpp.js  compile_tests.js  cpplint.js  generate_messages.js  generate_tsd.js  npm-pack.sh  npmjs-readme.md  ros_distro.js  run_param_tests.js  run_test.js  test.js
src/: addon.cpp  executor.cpp  executor.hpp  handle_manager.cpp  handle_manager.hpp  macros.hpp  rcl_action_bindings.cpp  rcl_action_bindings.hpp  rcl_bindings.cpp  rcl_bindings.hpp  rcl_bindings_publisher.cpp  rcl_handle.cpp  rcl_handle.hpp  rcl_lifecycle_bindings.cpp  rcl_lifecycle_bindings.hpp  rcl_utilities.cpp  rcl_utilities.hpp  shadow_node.cpp  shadow_node.hpp  type_conversion.hpp
test/: array_generator.js  blacklist.json  blocklist.json  client_setup.js  gc-on-exit.js  publisher_array_setup.js  publisher_msg.js  publisher_msg_colorrgba.js  publisher_msg_header.js  publisher_msg_jointstate.js  publisher_setup.js  run-node.js  test-action-client.js  test-action-graph.js  test-action-server.js  test-action-uuid.js  test-action2msg.js  test-actionlib.js  test-array-data.js  test-array.js  test-bounded-array.js  test-bounded-sequences.js  test-compound-msg-type-check.js  test-context.js  test-cross-lang.js  test-default-messages.js  test-destruction.js  test-disable-typedarray.js  test-distro.js  test-existance.js  test-expand-topic.js  test-extra-destroy-methods.js  test-fixed-array.js  test-fixed-arrays.js  test-generate-messages-bin.js  test-guard-condition.js  test-init-shutdown.js  test-interactive.js  test-lifecycle-publisher.js  test-lifecycle.js  (+39 more)
test/cpp/: .gitignore  CMakeLists.txt  add_two_ints_client  add_two_ints_client.cpp  listener  listener.cpp  publisher_msg.cpp  subscription_msg.cpp
test/overlay_test_ws/geometry_msgs/: CMakeLists.txt  package.xml
test/rclnodejs_test_msgs/: CMakeLists.txt  package.xml
test/rclnodejs_test_msgs/msg/: StaticArrayNonPrimitives.msg
tutorials/: actionlib.md
types/: .eslintrc.json  (+30 more)
(+913 files in other folders)
