<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclcpp_benchmark</name>
  <version>0.0.1</version>
  <description>Benchmark for rclcpp</description>
  <maintainer email="minggang.wang@intel.com">Minggang Wang</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

